--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 #isNeedHomeModle=true
 isNeedHomeModle=true
 
-isNeedMineModle=false
+isNeedMineModle=true
 #isNeedMineModle=false
 
