--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     apply from: 'config.gradle'
 
     dependencies {
-        classpath extAndroidBulidGradlePlugin
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath extButterknifeGradlePlugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
