--- a/config.gradle
+++ b/config.gradle
@@ -37,4 +37,6 @@ ext{
     //ARouter
     extARouterApi = 'com.alibaba:arouter-api:1.3.1'//ARouter api
     extARouterCompiler = 'com.alibaba:arouter-compiler:1.1.4'//ARouter
+
+    extEventbus = 'org.greenrobot:eventbus:3.1.1'
 }
